# SecretSentinel

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SecretSentinel_PRD_v1.0.docx
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: Dockerfile  README.md  package-lock.json  package.json
api/src/: index.ts  logger.ts  metrics.ts  middleware.test.ts  middleware.ts
api/src/graphql/: resolvers.ts  schema.ts
cli/: .golangci.yml  README.md  go.mod
cli/cmd/sentineld/: main.go
cli/internal/commands/: init.go  scan.go  scan_test.go
cli/internal/detect/: entropy.go  entropy_test.go  patterns.go  patterns_test.go  remote.go  types.go
cli/internal/git/: diff.go
cli/internal/ignore/: ignore.go
cli/internal/output/: format.go
dashboard/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.test.tsx  App.tsx  api.ts  auth.tsx
dashboard/src/pages/: Login.tsx  Secrets.tsx
detection/: Dockerfile  README.md  pyproject.toml
detection/app/: main.py  models.py  service.py  validators.py
detection/app/detectors/: context.py  entropy.py  regex_rules.py
detection/tests/: test_context.py  test_entropy.py  test_rules.py  test_service.py  test_validators.py
infra/: docker-compose.prod.yml  docker-compose.yml
infra/terraform/: main.tf
rotation/: Dockerfile  README.md  package-lock.json  package.json
rotation/src/: index.test.ts  index.ts  metrics.ts
scripts/: run-prod.sh
shared/: README.md
vault/: Dockerfile  README.md  package-lock.json  package.json
vault/migrations/: 001_create_vault_secrets.sql  002_add_audit_log.sql  003_add_secret_versions.sql
vault/sdk/: README.md  package-lock.json  package.json  tsconfig.json
vault/sdk/src/: index.ts
vault/src/: auth.test.ts  auth.ts  crypto.test.ts  crypto.ts  index.ts  metrics.ts  store.ts  vault.ts
vault/src/providers/: aws.ts  generic.ts
vault/src/routes/: audit.ts  secrets.ts
